[package]
name = "texture_pack"
version = "0.1.0"
authors = ["Ashton S. <aasouth223@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfd2 = "0.3.0"
image = "0.23.14"
msgbox = "0.6.0"
zip = "0.5.8"
zip-extensions = "0.6.0"
directories-next = "2.0.0"